# demo_shiny

./: .gitignore  pyproject.toml  requirements.txt  run.bat  run_site.ps1
demo_shiny/: app.py
