[tool.poetry]
name = "demo-shiny"
version = "0.1.0"
description = ""
authors = ["Lucas Barbosa Defanti <lucasbdefanti@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
shiny = "^1.0.0"
matplotlib = "^3.9.1"
nest-asyncio = "^1.6.0"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
